# Digi-tionary

./: .gitignore  API_DEMO.md  IMPROVEMENTS.md  JUDGING_GUIDE.md  QUICKSTART.md  README.md  debug_siwe.py  main.py  pyproject.toml  repo.py  requirements.txt  start.bat  start.sh  test-file-ethan  test_evm.py  test_ffi.py  testfile.py
Presentation/: Notes.docx  ~$Notes.docx
api/: blockchain_client.py  main.py  merkle_bridge.py
contracts/: Digitionary.sol
evm/constants/: limits.py
evm/core/: blockchain_storage.py  stack.py  state.py
evm/execution/: evm.py
examples/: run_stack.py
frontend/: package-lock.json  package.json  test-auth.html  vite.config.js
frontend/src/: App.jsx  TestAuthMain.jsx  index.css
frontend/src/components/: MerkleGraph.jsx  WalletConnect.jsx
frontend/src/pages/: CreatePage.jsx  Dashboard.jsx  GraphPage.jsx  Library.jsx  ProfilePage.jsx  TestAuthPage.jsx
frontend/src/utils/: transaction.js
merkle/: build.sh  export.go  go.mod  libmerkle.h  merkle.go
repo/: capi.go  go.mod  store.go
